# utility

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/epsilib/: utility.hpp
include/epsilib/utility/: container_helpers.hpp  tictoc.hpp  to_string.hpp
src/: tictoc.cpp
